Add more methods, add docs
